# obsidian-rag-mcp

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SUPPORT.md  pyproject.toml  release-please-config.json  run-server.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  DEVELOPMENT.md  GETTING_STARTED.md  INTEGRATION.md  PROJECT_LOG.md
docs/decisions/: README.md  adr-0001-chromadb.md  adr-0002-ci-health-checks.md  adr-0003-openai-embeddings.md  adr-0004-memory-as-reasoning.md
docs/research/: PHASE3_ALTERNATIVE_PERSPECTIVE.md  PHASE3_DECISION.md  PHASE3_SELF_IMPROVING_MEMORY.md
obsidian_rag_mcp/: __init__.py
obsidian_rag_mcp/cli/: main.py
obsidian_rag_mcp/mcp/: __init__.py  __main__.py  server.py
obsidian_rag_mcp/rag/: __init__.py  chunker.py  embedder.py  engine.py  indexer.py
obsidian_rag_mcp/reasoning/: conclusion_store.py  extractor.py
obsidian_rag_mcp/utils/: __init__.py  tokens.py
scripts/: seed_vault.py
src/cli/: main.py
src/mcp/: __init__.py  __main__.py  server.py
src/rag/: __init__.py  chunker.py  embedder.py  engine.py  indexer.py  reasoner.py
src/reasoning/: __init__.py  conclusion_store.py  extractor.py  models.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_embedder.py  test_engine.py  test_indexer.py  test_integration.py  test_reasoner.py  test_reasoning.py  test_server.py  test_tokens.py
vault/: README.md
vault/RCAs/: 2025-01-29-dns-resolution-failure.md  2025-01-30-disk-space-exhaustion.md  2025-02-17-deployment-rollback-required.md  2025-02-24-database-connection-pool-exhaustion.md  2025-02-24-disk-space-exhaustion.md  2025-03-01-kubernetes-pod-crash-loop.md  2025-03-05-database-connection-pool-exhaustion.md  2025-03-05-deployment-rollback-required.md  2025-03-07-database-connection-pool-exhaustion.md  2025-03-09-disk-space-exhaustion.md  2025-03-10-disk-space-exhaustion.md  2025-03-15-deadlock-in-transaction.md  2025-03-18-certificate-expiration.md  2025-03-23-memory-leak-in-service.md  2025-03-27-memory-leak-in-service.md  2025-03-29-certificate-expiration.md  2025-04-01-disk-space-exhaustion.md  2025-04-05-cache-invalidation-bug.md  2025-04-06-load-balancer-misconfiguration.md  2025-04-07-cache-invalidation-bug.md  2025-04-10-rate-limiting-triggered.md  2025-04-11-deadlock-in-transaction.md  2025-04-13-memory-leak-in-service.md  2025-04-13-rate-limiting-triggered.md  2025-04-17-third-party-api-degradation.md  2025-04-19-load-balancer-misconfiguration.md  2025-04-27-load-balancer-misconfiguration.md  2025-04-28-load-balancer-misconfiguration.md  2025-04-29-third-party-api-degradation.md  2025-05-04-deadlock-in-transaction.md  2025-05-05-query-timeout-under-load.md  2025-05-08-dns-resolution-failure.md  2025-05-10-memory-leak-in-service.md  2025-05-11-database-connection-pool-exhaustion.md  2025-05-12-certificate-expiration.md  2025-05-15-message-queue-backlog.md  2025-05-17-database-connection-pool-exhaustion.md  2025-05-23-load-balancer-misconfiguration.md  2025-05-26-query-timeout-under-load.md  2025-05-27-third-party-api-degradation.md  (+71 more)
vault/Runbooks/: runbook-analytics-pipeline.md  runbook-auth-service.md  runbook-billing-api.md  runbook-inventory-api.md  runbook-notification-service.md  runbook-order-service.md  runbook-payment-gateway.md  runbook-recommendation-engine.md  runbook-search-api.md  runbook-user-service.md
vault/Services/: analytics-pipeline.md  auth-service.md  billing-api.md  inventory-api.md  notification-service.md  order-service.md  payment-gateway.md  recommendation-engine.md  search-api.md  user-service.md
